--- a/LojaTela/css/teste.css
+++ b/LojaTela/css/teste.css
@@ -167,3 +167,39 @@ h2 {
     text-align: center;
     color: #FFFFFF;
 }
+
+.grade {
+    top: 43%;
+    left: 25%;
+    position: absolute;
+    width: 54%;
+    height: 39%;
+}
+
+[id$='Button1'] {
+    margin-left: 35%;
+}
+.button {
+    display: inline-block;
+    padding: 15px 25px;
+    font-size: 24px;
+    cursor: pointer;
+    text-align: center;
+    text-decoration: none;
+    outline: none;
+    color: black;
+    background-color: rgb(255, 255, 255);
+    border: none;
+    border-radius: 15px;
+    box-shadow: 0 9px #999;
+}
+
+    .button:hover {
+        background-color: rgb(88, 86, 86);
+    }
+
+    .button:active {
+        background-color: #3e8e41;
+        box-shadow: 0 5px #666;
+        transform: translateY(4px);
+    }
