--- a/LojaTela/css/cliente.css
+++ b/LojaTela/css/cliente.css
@@ -6,50 +6,15 @@
     font-family:'Roboto Condensed' , sans-serif;
   }
   
-  #header{
-    background-size: cover;
-    background-position: center;
-    background-attachment: fixed;
-    height: 100vh;
-    background-image:url(../img/background.png);
-  }
-  #logo {
-      margin-top:5px;
-      margin-left:91px;
-      height:57px;
-      width:57px;
-      background-image:url(../img/Logo.png);
-      background-repeat:no-repeat;
-  }
-  #menu {
-	margin-top:-40px;
-	margin-left:1350px;
-	height:32px;
-	width:544px;
-}
-ul li{
-
-	float:left;
-	list-style:none;
-	font-size:25px;
-	font-weight:300;
-	font-family: 'Roboto Condensed', sans-serif;
-}
-
-a{
-	padding:15px 15px 0px 15px;
-	text-decoration:none;
-	color:rgb(0, 0, 0);
-
-}
 .botao a:hover{
 	border-bottom: 3px solid #5c2373;
   animation-duration: 0.2s;
 }
-  .contato{
-    margin-top: 25px;
-    background:rgb(12, 68, 170);
-  }
+.contato {
+    position: absolute;
+    top: 30%;
+    left: 41%;
+}
   .contato h1{
     padding-top: 20px;
     font-weight: 700;
@@ -191,7 +156,7 @@ input:focus, textarea:focus {
 	background-color:white;
 }
 
-#button-blue{
+[id$='ButtonSalvar']{
 	font-family: 'Montserrat', Helvetica, Arial,  sans-serif;
 	float:left;
 	width: 100%;
@@ -207,10 +172,11 @@ input:focus, textarea:focus {
 	transition: all 0.3s;
 }
 
-#button-blue:hover{
-	background-color: rgba(0,0,0,0);
-	color: rgb(12, 68, 170);;
-}
+    [id$='ButtonSalvar']:hover {
+        background-color: rgba(0,0,0,0);
+        color: rgb(12, 68, 170);
+        
+    }
 
 .submit:hover {
 	color: #3498db;
@@ -242,4 +208,10 @@ input:focus, textarea:focus {
 		padding-left: 3%;
 		padding-right: 3%;
 	}
+}
+
+#gambiarra {
+    position: absolute;
+    top: 71%;
+    left: 83%;
 }
